--- a/index.html
+++ b/index.html
@@ -9,34 +9,80 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-
-  Samuel Green
-  Available to Walk
-
-  That sounds great. I’d be happy with that.
-
-  Could you send over some pictures of your dog, please?
-
-  Here are a few pictures. She’s a happy girl!
-
-  Can you make it?
-
-  She looks so happy! The time we discussed works. How long shall I take her out for?
-
-  30 minute walk
-  $29
-
-  1 hour walk
-  $49
-
-  Type a message…
-
-  Simple booking
-
-  Stay in touch with our dog walkers through the chat interface. This makes it easy to 
-  discuss arrangements and make bookings. Once the walk has been completed you can rate 
-  your walker and book again all through the chat.
+  <main>
+    <section class="phone">
+      <div class="wrapper">
+        <div class="top-section">
+        <div class="top-circle"></div>
+        <div class="user">
+          <div class="back-btn">
+            <i class="back-icon fa-solid fa-chevron-left"></i>
+          </div>
+          <div class="user-profile">
+            <div class="user-pic">
+              <img src="./images/avatar.jpg" alt="User profile pic" class="pfp">
+            </div>
+            <div class="user-info">
+              <div class="user-name">Samuel Green</div>
+              <div class="user-status">Available to Walk</div>
+            </div>
+          </div>
+          <div class="dots-btn">
+            <i class="3-dots-icon fa-solid fa-ellipsis-vertical"></i>
+          </div>
+        </div>
+        </div>
+        <div class="chat-section">
+        <div class="msg received">That sounds great. I’d be happy with that.</div>
+        <div class="msg received">Could you send over some pictures of your dog, please?</div>
+        <div class="msg image-row">
+          <div class="img">
+            <img src="./images/dog-image-1.jpg" alt="Dog smiling">
+          </div>
+          <div class="img">
+            <img src="./images/dog-image-2.jpg" alt="Dog laying on the floor">
+          </div>
+          <div class="img">
+            <img src="./images/dog-image-3.jpg" alt="Dog with stick in his mouth">
+          </div>
+        </div>
+        <div class="msg sent">Here are a few pictures. She’s a happy girl!</div>
+        <div class="msg sent">Can you make it?</div>
+        <div class="msg received">She looks so happy! The time we discussed works. How long shall I take her out for?</div>
+        <div class="msg received price-bubble">
+          <div class="price-circle">
+            <i class="circle-icon fa-regular fa-circle"></i>
+            30 minute walk
+            <div class="price">$29</div>
+          </div>
+        </div>
+        <div class="msg received price-bubble">
+          <div class="price-circle">
+            <i class="circle-icon fa-regular fa-circle"></i>
+            1 hour walk
+            <div class="price">$49</div>
+          </div>
+        </div>
+        <div class="text-input">
+          <span class="placeholder">Type a message…</span>
+          <div class="send-btn">
+            <i class="send-icon fa-solid fa-angle-right"></i>
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
+    <section class="app-info">
+      <h1 class="title">Simple booking</h1>
+      <p class="description">
+        Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+        discuss arrangements and make bookings. Once the walk has been completed you can rate 
+        your walker and book again all through the chat.
+      </p>
+    </section>
+  </main>
 </body>
 </html>
