Finished app description style.css

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
       </div>
     </section>
-    <section class="app-info">
+    <section class="app-info flex center column">
       <h1 class="title">Simple booking</h1>
       <p class="description">
         Stay in touch with our dog walkers through the chat interface. This makes it easy to 
