--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-  <main>
+<body class="flex">
+  <main class="flex column center">
     <section class="phone">
       <div class="wrapper">
-        <div class="top-section">
-        <div class="top-circle"></div>
-        <div class="user">
-          <div class="back-btn">
+        <div class="top-section flex">
+          <div class="top-section-square"></div>
+          <div class="user flex center">
+            <div class="back-btn">
             <i class="back-icon fa-solid fa-chevron-left"></i>
-          </div>
-          <div class="user-profile">
-            <div class="user-pic">
-              <img src="./images/avatar.jpg" alt="User profile pic" class="pfp">
             </div>
-            <div class="user-info">
+            <div class="user-profile flex">
+              <div class="user-pic">
+              <img src="./images/avatar.jpg" alt="User profile pic" class="pfp">
+              </div>
+              <div class="user-info flex column">
               <div class="user-name">Samuel Green</div>
               <div class="user-status">Available to Walk</div>
+              </div>
+            </div>
+            <div class="dots-btn">
+            <i class="dots-icon fa-solid fa-ellipsis-vertical"></i>
             </div>
           </div>
-          <div class="dots-btn">
-            <i class="3-dots-icon fa-solid fa-ellipsis-vertical"></i>
-          </div>
         </div>
-        </div>
-        <div class="chat-section">
-        <div class="msg received">That sounds great. I’d be happy with that.</div>
-        <div class="msg received">Could you send over some pictures of your dog, please?</div>
-        <div class="msg image-row">
+        <div class="chat-section flex column">
+          <div class="msg received">That sounds great. I’d be happy with that.</div>
+          <div class="msg received">Could you send over some pictures of your dog, please?</div>
+          <div class="msg sent image-row flex">
           <div class="img">
             <img src="./images/dog-image-1.jpg" alt="Dog smiling">
           </div>
@@ -48,34 +48,34 @@
           <div class="img">
             <img src="./images/dog-image-3.jpg" alt="Dog with stick in his mouth">
           </div>
-        </div>
-        <div class="msg sent">Here are a few pictures. She’s a happy girl!</div>
-        <div class="msg sent">Can you make it?</div>
-        <div class="msg received">She looks so happy! The time we discussed works. How long shall I take her out for?</div>
-        <div class="msg received price-bubble">
-          <div class="price-circle">
-            <i class="circle-icon fa-regular fa-circle"></i>
-            30 minute walk
+          </div>
+          <div class="msg sent">Here are a few pictures. She’s a happy girl!</div>
+          <div class="msg sent">Can you make it?</div>
+          <div class="msg received">She looks so happy! The time we discussed works. How long shall I take her out for?</div>
+          <div class="msg received price-bubble flex center">
+            <div class="left flex">
+              <i class="circle-icon fa-regular fa-circle"></i>
+            <div class="walk-duration">30 minute walk</div>
+            </div>
             <div class="price">$29</div>
           </div>
-        </div>
-        <div class="msg received price-bubble">
-          <div class="price-circle">
-            <i class="circle-icon fa-regular fa-circle"></i>
-            1 hour walk
+          <div class="msg received price-bubble flex center">
+            <div class="left flex">
+              <i class="circle-icon fa-regular fa-circle"></i>
+            <div class="walk-duration">1 hour walk</div>
+            </div>
             <div class="price">$49</div>
           </div>
-        </div>
-        <div class="text-input">
+          <div class="text-input flex">
           <span class="placeholder">Type a message…</span>
-          <div class="send-btn">
+          <div class="send-btn flex center">
             <i class="send-icon fa-solid fa-angle-right"></i>
           </div>
-        </div>
+          </div>
         </div>
       </div>
     </section>
-    <section class="app-info flex center column">
+    <section class="app-info flex column">
       <h1 class="title">Simple booking</h1>
       <p class="description">
         Stay in touch with our dog walkers through the chat interface. This makes it easy to 
