--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="flex center">
+  <div class="bg-bubble bubble-left"></div>
+  <div class="bg-bubble bubble-right"></div>
   <main class="flex column center">
     <section class="phone center">
       <div class="wrapper">
